--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.PW01ТВ13УшаковВікторВіталійович"
         tools:targetApi="31">
         <activity
+            android:name=".ResultActivity2"
+            android:exported="false" />
+        <activity
+            android:name=".InsrertActivity2"
+            android:exported="false" />
+        <activity
             android:name=".ResultActivity1"
             android:exported="false" />
         <activity
